<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:title="@string/title_explore"
        android:icon="@drawable/ic_home"
        />
    <item android:id="@+id/favoriteFragment"
        android:title="@string/title_favorite"
        android:icon="@drawable/ic_favorite"
        />
</menu>